# F2CGT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  run.sh  run_compress.sh  t4_run_papers100M.sh  test.py
example/: datagen.py  demo.py  demo_feature_cache.py  graph_reorder.py  load_dataset.py  load_graph.py  models.py  preprocess_compress.py  preprocess_compute_slope.py  preprocess_datagen.py  presampling_node_classification.py  run_compress.py  train_dist_gat_nodeclassification.py  train_dist_graphsage_nodeclassification.py  train_gat_nodeclassification.py  train_graphsage_nodeclassification.py  train_link_prediction.py  train_node_classification.py  train_node_classification_mag240m.py
examples/: compress.py  conv.py  dataloader.py  ip_config1.txt  ip_config2.txt  ip_config3.txt  ip_config4.txt  launch_dist_train.py  load_dataset.py  models.py  my_kmeans.py  process_compress.py  process_dataset.py  tensor_cache.py  test_my_kmeans.py  train_graphsage_nodeclass.py  train_graphsage_nodeclass_dist.py  train_graphsage_nodeclass_nocompress.py
python/: setup.py
python/bifeat/: __init__.py  feature_cache.py  shm.py
python/bifeat/cache/: __init__.py  adj_cache.py  cache_allocate.py  feature_cache.py
python/bifeat/compression/: __init__.py  compresser.py  decompresser.py  packbits.py  utils.py
python/bifeat/dataloading/: dataloader.py
python/pagraph/: __init__.py  feature_cache.py
python/pagraph/compression/: __init__.py  compresser.py  utils.py
python/pagraph/quantization/: __init__.py  kmeans.py  packbits.py  utils.py
scripts/: find_pybind11.py  find_torch.py  run.sh  run_ablation.sh  run_acc.sh  run_compress.sh  run_dist0.sh  run_dist1.sh  run_dist2.sh  run_dist3.sh  run_dist_products.sh  run_friendster.sh  run_mag.sh  run_mag240m.sh  run_mag_dist_sampling.sh  run_papers.sh  run_papers_dist_sampling.sh  run_products.sh  run_slope.sh
src/: atomic.h  common.h  cuda_operators.h  cuda_utils.cuh  feature.cu  fusion_dropout.cu  fusion_spmm.cu  hashmap.cu  hashmap.h  kmeans.cu  kmeans.h  packbits.cu  packbits.h  pg_ops.h  pin_memory.h  pybind.cc  pybind.cu  sq_quantization.cu  vq_quantization.cu
src/cpu/: omp.h
src/cuda/: atomic.h  bisageconv.cu  cub_function.h  cuda_ops.h  extract_adj.cu  fetch.cu  hashmap.cu  hashmap.h  rowwise_sampling.cu  sq_decompress.cu  tensor_relabel.cu  vq_decompress.cu
src/hashmap/: hashmap_v2.cu  hashmap_v2.h
src/shm/: shared_memory.h
tests/: test_adj_cache.py  test_adj_slope.py  test_adj_slope_compute.py  test_cache_idx_select.py  test_compresser.py  test_feat_cache.py  test_feat_slope.py  test_feat_slope_compute.py  test_full_sampling.py  test_fusion_decompress.py  test_fusion_decompress_spmm.py  test_fusion_sage.py  test_g_reorder.py  test_hashmap.py  test_hashmap_v2.py  test_kmeans.py  test_packbits.py  test_pairwise_dist.py  test_slope.py  test_spmm.py  test_sq.py  test_vq.py
